# Resonance

./: .gitignore  BUILD RESONANCE.bat  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  START RESONANCE (with console).bat  START RESONANCE.bat  Start Resonance (Linux, Mac).sh  Start Resonance (Linux, Mac, with console).sh  Start Resonance (Windows).bat  TESTING.md  VERSION.md  build_exe.spec  check_uv.bat  create_icon.py  install.sh  pyproject.toml  requirements.txt  resonance.manifest  resonance.spec  tesseract-README.md  test_prompt.py
.github/workflows/: build.yml
docs/: post-processor-installation.md  tesseract-bundling.md
docs/plans/: 2026-02-26-post-processing-design.md  2026-02-26-post-processing.md  2026-02-26-python312-migration-design.md  2026-02-26-python312-migration.md  2026-02-26-whispercpp-vulkan-design.md  2026-02-27-post-processing-design.md  2026-02-27-post-processing-impl.md  2026-02-27-recording-overlay-design.md  2026-02-27-recording-overlay-impl.md  2026-02-28-ocr-context-design.md  2026-02-28-ocr-context-impl.md  2026-02-28-post-processor-design.md  2026-02-28-post-processor-impl.md  2026-03-02-debug-mode-design.md  2026-03-02-debug-mode-impl.md  2026-03-06-cross-platform-support.md
scripts/: benchmark_postproc.py  download_tesseract.py  setup_postprocessor.py
src/: main.py
src/core/: audio_recorder.py  debug_manager.py  dictionary.py  hotkey_manager.py  keyboard_typer.py  learning_engine.py  media_control.py  post_processor.py  screen_context.py  sound_effects.py  text_cleaners.py  transcriber.py  updater.py
src/gui/: changelog_dialog.py  debug_panel.py  dictionary_dialog.py  recording_overlay.py  settings_dialog.py  system_tray.py  theme.py  toast_notification.py  update_toast.py
src/utils/: config.py  logger.py  platform_check.py  resource_path.py
tests/core/: test_post_processor.py
tests/utils/: test_config_postproc.py
