[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance"
version = "3.2.3"
description = "A local voice-to-text dictation application using OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.6.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "mss>=9.0.0",
    "packaging>=23.0",
    "pywinctl>=0.0.50",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[project.scripts]
resonance = "src.main:main"

[tool.uv]
managed = true
